@@ -6,6 +6,7 @@
 // geant4
 #include "G4GDMLParser.hh"
 #include "G4LogicalVolume.hh"
+//#include "G4PhysicalVolumeStore.hh"
 
 map<string, detector> gdml_det_factory::loadDetectors()
 {
@@ -43,6 +44,7 @@ map<string, detector> gdml_det_factory::loadDetectors()
 
 		// parsing G4 volumes
 		parser->Read(gname, 0);
+		//G4PhysicalVolumeStore::DeRegister(parser->GetWorldVolume());
 
 		// the volume name has to be "World"
 		// its origin are "root" coordinate
@@ -59,12 +61,16 @@ map<string, detector> gdml_det_factory::loadDetectors()
 			thisDet.mother = "root";
 			thisDet.variation = gname;
 
-			if(verbosity>2) cout << thisDet ;
-
 			// now browsing for daughters
 			G4LogicalVolume* firstDaughter = gdmlWorld->GetDaughter(d)->GetLogicalVolume();
-			for(int gd=0; gd<firstDaughter->GetNoDaughters (); gd++) {
-				cout <<  " gd: " << firstDaughter->GetDaughter(d)->GetLogicalVolume()->GetName() << endl;
+			for(int gd=0; gd<firstDaughter->GetNoDaughters(); gd++) {
+
+				detector thisDDet = get_detector(firstDaughter->GetDaughter(d),  gemcOpt, RC);
+				thisDDet.mother = thisDetName;
+				thisDDet.variation = gname;
+
+			//	cout <<  " gd: " << firstDaughter->GetDaughter(d)->GetLogicalVolume()->GetName() << endl;
+				dets[thisDDet.name] = thisDDet;
 			}
 
 			dets[thisDet.name] = thisDet;
@@ -83,43 +89,74 @@ map<string, detector> gdml_det_factory::loadDetectors()
 
 			QDomDocument domDocument;
 			// opening gcard and filling domDocument
-			if(!domDocument.setContent(&gxml))
-			{
+			if(!domDocument.setContent(&gxml)) {
 				cout << " >>  xml format for file <" << fname << "> is wrong - check XML syntax. Exiting." << endl;
 				exit(0);
 			}
 			gxml.close();
 
 			QDomNodeList volumes = domDocument.firstChildElement().elementsByTagName("volume");
-			for(int i = 0; i < volumes.count(); i++)
-			{
+			for(int i = 0; i < volumes.count(); i++) {
 				QDomNode elm = volumes.at(i);
-				if(elm.isElement())
-				{
+				if(elm.isElement()) {
 					QDomElement e = elm.toElement();
 					string volumeName   = e.attribute("name").toStdString();
 					string color        = e.attribute("color").toStdString();
 					string material     = e.attribute("material").toStdString();
 					string sensitivity  = e.attribute("sensitivity").toStdString();
 					string identifiers  = e.attribute("identifiers").toStdString();
+					string visible      = e.attribute("visible").toStdString();
+					string style        = e.attribute("style").toStdString();
 
-					if(verbosity>3) {
-						cout << " Volume: " << volumeName
-						<< " color: " << color
-						<< " material: " << material
-						<< " sensitivity: " << sensitivity
-						<< " identifiers: " << identifiers << endl;
+					// assigning attributes to volume
+					if(dets.find(volumeName) != dets.end()) {
+
+						//if(verbosity>3)
+						cout << " Modifying attributes for volume: " << volumeName ;
+
+
+						if(color != "") {
+							//if(verbosity>3)
+							cout << " color: " << color ;
+
+							G4Colour thisCol = gcol(color);
+							dets[volumeName].VAtts = G4VisAttributes(thisCol);
+						}
+
+						visible == "no" ? dets[volumeName].VAtts.SetVisibility(false) : dets[volumeName].VAtts.SetVisibility(true);
+						style == "wireframe" ?  dets[volumeName].VAtts.SetForceWireframe(true) : dets[volumeName].VAtts.SetForceSolid(true);
+
+						if(sensitivity != "") {
+							cout << " sensitivity: " << sensitivity ;
+							dets[volumeName].sensitivity = sensitivity;
+
+							// identifier must be defined
+							if(identifiers != "") {
+								cout << " identifiers: " << identifiers ;
+								dets[volumeName].identity = get_identifiers(identifiers);
+
+							} else {
+								cout << " !! Error: volume " << volumeName << " has sensitivity but not identifier. " << endl;
+							}
+						}
+
+						if(material != "") {
+							//if(verbosity>3)
+							cout << " material: " << material ;
+							dets[volumeName].material = material;
+						}
+
+						//if(verbosity>3)
+						cout << endl;
 					}
 				}
-				
 			}
 		}
+	}
 
- 	}
-
-
-
-
+	for(const auto &dd : dets)
+		if(verbosity>3)
+			cout << dd.second;
 
 
  	return dets;
